--[[

Group Bulletin Board 	

2.59
- Fixed interference with other addons
- Make LFG bar optional (configured in setting)

2.58 
 - Added a text box to post LFG msg at a click of a button

2.57 
 - Added support for arena

2.56
 - Fixed localization channel bug

2.55
 - Filtering by normal dungeon
 - Raid categorization
 - Selecting normal only or heroic only filter will not cause raids to be filtered out
 - Support for Chinese (zhTW Traditional Taiwan) done completely by pallthennonwow, so huge thanks or huge hate to him
 - Removed post history as it's just clutter
 
2.54
 - Fixed addon crashing when custom localization is set
 - Fixed localization not working
 - Updated Russian localization (thanks to hungry)
 - Updated French official channel (thanks to yannlugrin)
 
2.53
 - Fix for heroic not filtering properly when custom in search patterns is checked
 
2.52
 - Added HC to heroics
 - Refactored to allow the option to configure heroic tags
 - Support for french localization thanks to mrbuds

2.51 
 - Added support to filter by heroic only dungeons
 - Supported to select color of heroic and normal dungeons
 - Fixed a bug where custom tags were not working
 - Fixed a bug that was causing classic dungeons in tbc to not display the proper level
 - Fixed a few tags, such as black morass appearing under black temple
 - Turns off classic dungeons by default in TBC
 
2.50 
 - More German localization
 
2.49 
 - Russian localization thanks to the great nourlie
 - German locization thanks to amazing tamariske

2.48
- Semi fixed classic dungeon levels with TBC
- Implemented Ctrl + Click to invite player (credit to: h0tw1r3)
- Fixed bug with Shift + Click (credit to: h0tw1r3)

2.47
- Added a new feature to contain all lfg spam in a single chat tab. Can be accessed via /gbb chat clean/organize. 
- It will create a new chat tab called "LFG", will subscribe player to spammy chat channels like "LookingForGroup" if they are not already subscribed.