@@ -91,7 +91,7 @@ GBB.locales = {
 		["BtnUnselectAll"]="Unselect all",
 		["BtnSelectAll"]="Select all",
 		
-		["BtnWispher"]="Wispher %s",
+		["BtnWhisper"]="Whisper %s",
 		["BtnInvite"]="Invite %s",
 		["BtnWho"]="Who %s",
 		["BtnIgnore"]="Ignore %s",
@@ -150,7 +150,7 @@ GBB.locales = {
 	["BtnUnFoldAll"] = "Alle entfalten",
 	["BtnUnselectAll"] = "Alles abwählen",
 	["BtnWho"] = "Who %s",
-	["BtnWispher"] = "%s anflüstern",
+	["BtnWhisper"] = "%s anflüstern",
 	["CboxAdditionalInfo"] = "Mehr Informationen bei /who und wenn jemand online kommt.",
 	["CboxCharDontFilterOwn"] = "Eigene Anfragen nicht filtern",
 	["CboxCharHeroicOnly"]= "Nur heroischer filter",
@@ -268,7 +268,7 @@ GBB.locales = {
 		["BtnUnFoldAll"]="Развернуть все",
 		["BtnUnselectAll"]="Снять все",
 		["BtnWho"]="Кто %s",
-		["BtnWispher"]="Шепот %s",
+		["BtnWhisper"]="Шепот %s",
 		["CboxCharDontFilterOwn"]="Не фильтровать собственный запрос",
 		["CboxCharHeroicOnly"]="Показывать только героические",
 		["CboxCharNormalOnly"]="Только нормальный фильтр",
@@ -437,7 +437,7 @@ GBB.locales = {
 		["BtnUnselectAll"]="取消全選",
 		["BtnSelectAll"]="全選",
 		
-		["BtnWispher"]="密語 %s",
+		["BtnWhisper"]="密語 %s",
 		["BtnInvite"]="邀請 %s",
 		["BtnWho"]="Who %s",
 		["BtnIgnore"]="忽略 %s",
